# rust-ios-example

./: .gitignore  GNUmakefile  build  install.sh
Complete/Recipes/: RecipeDetailTopViewController.swift
Complete/turning-on-mac-catalyst-complete.xcodeproj/: project.pbxproj
Complete/turning-on-mac-catalyst-complete.xcodeproj/xcshareddata/xcschemes/: Recipes-Catalyst.xcscheme  Recipes-Sim.xcscheme  Recipes.xcscheme
StartingPoint/Recipes/: RecipeCollectionsViewController.swift
StartingPoint/Recipes/Base.lproj/: Main.storyboard
StartingPoint/turning-on-mac-catalyst-starting-point.xcodeproj/: project.pbxproj
StartingPoint/turning-on-mac-catalyst-starting-point.xcodeproj/xcshareddata/xcschemes/: Recipes.xcscheme
hello-rust/hello-rust/: ViewController.swift
hello-rust/hello-rust.xcodeproj/: project.pbxproj
hello-rust/hello-rust.xcodeproj/xcshareddata/xcschemes/: hello-rust-sim.xcscheme
hello-rust/hello-rust/Base.lproj/: Main.storyboard
rust/: Cargo.toml  rust.h
rust/src/: lib.rs
