[package]
name = "rust"
version = "0.1.0"
authors = ["Emil Sjölander <emil@visly.app>"]
edition = "2018"

[dependencies]
objc = { git = "https://github.com/RandyMcMillan/rust-objc.git", version = "0.2.7" }

[lib]
name = "rust"
crate-type = ["staticlib", "cdylib"]

[dev-dependencies]
cargo-lipo = "3.3.1"
cbindgen = "0.26.0"
